--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
-  - repo: https://github.com/psf/black
+  - repo: https://github.com/Eeonum/pysystemtrade
     rev: 22.12.0
     hooks:
       - id: black
@@ -7,4 +7,4 @@ repos:
         # supported by your project here, or alternatively use
         # pre-commit's default_language_version, see
         # https://pre-commit.com/#top_level-default_language_version
-        language_version: python3.8
+        language_version: python3.10.14
